# iu9-networks

./: .gitignore  .gitmodules  Dockerfile  requirements.txt
lab1/: go.mod  go.sum
lab1/cmd/client/: client.go
lab1/cmd/server/: server.go  server_test.go
lab1/internal/dynarray/: dynarray.go
lab1/internal/polygon/: angle.go  bench_test.go  cpuprofile.txt  iterator.go  polygon.go  polygon_test.go  service.go  service_test.go  slice.txt  slice1.txt  slice_polygon.go  slice_polygon_test.go  treap.txt  treap_custom_allocator.txt  treap_fast_build.txt  treap_polygon.go  treap_polygon_test.go  treap_preallocate_small.txt  utils.go  vertex.go
lab1/internal/proto/: helpers.go  proto.go
lab10/: Makefile  go.mod  go.sum
lab10/html/: index.html
lab2/: go.mod  go.sum
lab3/: Makefile  go.mod  go.sum
lab3.2/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  lsp-docker.yml
lab3.2/cmd/yars/: yars.go
lab3.2/internal/example/: example.go  example_test.go
lab3.2/internal/inotify/: inotify.go  inotify_test.go
lab3.2/src/: main.cpp  tmp.hpp
lab3.2/src/painting/: model.hpp
lab3.2/src/views/: canvas.cpp  canvas.hpp  main.cpp  main.hpp
lab3.2/tests/: conftest.py  pytest.ini  test_basic.py  test_simple.py
lab4/: go.mod  go.sum
lab5/: Dockerfile  Makefile  go.mod  service-docker-compose.yml
lab5/tests/: conftest.py  test_api.py  test_basic.py
lab6/: Makefile  go.mod  go.sum  shell.nix
lab7/: Makefile  go.mod  shell.nix
lab8/: Makefile  go.mod  go.sum  shell.nix
lab8/content/: index.html  iu9lab.cls
lab8/templates/: pandoc.template
lab9/: Makefile  go.mod  go.sum  shell.nix
lab9/html/: async.html  auth.html  index.html
reports/: 1.md  2.md  3.md  4.md  5.md  pandoc.template  template
(+49 files in other folders)
